backend.log
INFO:     Will watch for changes in these directories: ['/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [6948] using StatReload
INFO:     Started server process [6951]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     127.0.0.1:53511 - "GET /llm_info HTTP/1.1" 200 OK
INFO:     127.0.0.1:53521 - "GET /llm_info HTTP/1.1" 200 OK
INFO:     127.0.0.1:53522 - "GET /tags HTTP/1.1" 200 OK
INFO:     127.0.0.1:53530 - "GET /word_lists HTTP/1.1" 200 OK
INFO:     127.0.0.1:53531 - "GET /word_list?language_1=english&language_2=spanish HTTP/1.1" 200 OK
INFO:     127.0.0.1:53534 - "GET /word_list?language_1=german&language_2=spanish HTTP/1.1" 200 OK
INFO:     127.0.0.1:53604 - "POST /save_word_list HTTP/1.1" 200 OK
INFO:     127.0.0.1:53606 - "GET /word_list?language_1=german&language_2=spanish HTTP/1.1" 200 OK
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [6951]
INFO:     Started server process [7050]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7050]
Process SpawnProcess-3:
Traceback (most recent call last):
  File "/Users/niklaswulkow/.local/share/uv/python/cpython-3.11.14-macos-aarch64-none/lib/python3.11/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/Users/niklaswulkow/.local/share/uv/python/cpython-3.11.14-macos-aarch64-none/lib/python3.11/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/_compat.py", line 30, in asyncio_run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/.local/share/uv/python/cpython-3.11.14-macos-aarch64-none/lib/python3.11/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/.local/share/uv/python/cpython-3.11.14-macos-aarch64-none/lib/python3.11/asyncio/base_events.py", line 654, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/venv/lib/python3.11/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niklaswulkow/.local/share/uv/python/cpython-3.11.14-macos-aarch64-none/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/api/main.py", line 9, in <module>
    from word_test_runner import sample_word, filter_word_list_by_description
  File "/Users/niklaswulkow/ResearchEngineering/Vokabeltrainer/word_test_runner.py", line 231
    exclude_words_with_tag: bool = False
                                   
SyntaxError: invalid syntax. Perhaps you forgot a comma?
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Started server process [7076]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7076]
INFO:     Started server process [7090]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7090]
INFO:     Started server process [7096]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7096]
INFO:     Started server process [7110]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7110]
INFO:     Started server process [7113]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7113]
INFO:     Started server process [7121]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7121]
INFO:     Started server process [7126]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'run_word_test.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7126]
INFO:     Started server process [7150]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'run_word_test.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7150]
INFO:     Started server process [7157]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'run_word_test.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7157]
INFO:     Started server process [8441]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'run_word_test.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [8441]
INFO:     Started server process [8536]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'word_test_runner.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [8536]
INFO:     Started server process [8987]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'api/main.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [8987]
INFO:     Started server process [9023]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
